issue horizontal scroll bar
trying to figure out why there is a horizontal scroll bar

--- a/clip.css
+++ b/clip.css
@@ -228,6 +228,12 @@ svg {
   display: grid;
   grid-gap: 5rem;
 }
+@media screen and (min-width: 800px) {
+  .logos {
+    grid-template-columns: repeat(5, 1fr);
+    overflow: hidden;
+  }
+}
 .myfooter {
   background-color: hsla(212, 10%, 33%, 0.1);
   padding: 3.5rem 0;
